--- a/app/src/main/res/menu/app_navbar.xml
+++ b/app/src/main/res/menu/app_navbar.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:title="Service" />
     <item
-        android:id="@+id/mapviewtFragment"
+        android:id="@+id/mapviewFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Mapview" />
