--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -13,122 +13,10 @@
         android:id="@+id/rl_header"
         layout="@layout/layout_header" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_searchbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10sp"
-        android:elevation="0dp"
-        app:cardCornerRadius="8sp"
-        app:strokeColor="#f1f1f4">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#f1f1f4"
-            android:padding="10sp">
-
-            <TextView
-                android:id="@+id/tv_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="center"
-                android:ellipsize="end"
-                android:fontFamily="@font/swiggy_font_regular"
-                android:maxLines="1"
-                android:text="Search for "
-                android:textColor="@color/grey"
-                android:textSize="16sp" />
-
-            <TextSwitcher
-                android:id="@+id/textSwitcher"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/tv_search"
-                android:ellipsize="end"
-                android:fontFamily="@font/swiggy_font_regular"
-                android:inAnimation="@anim/text_slide_to_top"
-                android:outAnimation="@anim/text_slide_from_bottom"
-                android:textColor="@color/grey" />
-
-            <ImageView
-                android:layout_width="20sp"
-                android:layout_height="20sp"
-                android:layout_marginEnd="10sp"
-                android:layout_toStartOf="@id/iv_mic"
-                android:src="@drawable/icon_search" />
-
-            <ImageView
-                android:id="@+id/iv_mic"
-                android:layout_width="20sp"
-                android:layout_height="20sp"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/icon_mic" />
-
-        </RelativeLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_searchbar2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10sp"
-        android:elevation="0dp"
-        android:visibility="gone"
-        app:cardCornerRadius="8sp"
-        app:strokeColor="#f1f1f4">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#f1f1f4"
-            android:padding="10sp">
-
-            <TextView
-                android:id="@+id/tv_search2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="center"
-                android:ellipsize="end"
-                android:fontFamily="@font/swiggy_font_regular"
-                android:maxLines="1"
-                android:text="Search for "
-                android:textColor="@color/grey"
-                android:textSize="16sp" />
-
-            <TextSwitcher
-                android:id="@+id/textSwitcher2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/tv_search2"
-                android:ellipsize="end"
-                android:fontFamily="@font/swiggy_font_regular"
-                android:inAnimation="@anim/text_slide_to_top"
-                android:outAnimation="@anim/text_slide_from_bottom"
-                android:textColor="@color/grey" />
-
-            <ImageView
-                android:layout_width="20sp"
-                android:layout_height="20sp"
-                android:layout_marginEnd="10sp"
-                android:layout_toStartOf="@id/iv_mic2"
-                android:src="@drawable/icon_search" />
-
-            <ImageView
-                android:id="@+id/iv_mic2"
-                android:layout_width="20sp"
-                android:layout_height="20sp"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/icon_mic" />
-
-        </RelativeLayout>
-
-    </com.google.android.material.card.MaterialCardView>
+    <!-- Searchbar -->
+    <include
+        android:id="@+id/service_searchbar"
+        layout="@layout/layout_searchbar" />
 
     <ScrollView
         android:id="@+id/sv_food"
@@ -142,7 +30,7 @@
             android:orientation="vertical">
 
             <!--            Quick categories -->
-            <include layout="@layout/layout_quickcategoriesservices"/>
+            <include layout="@layout/layout_quickcategoriesservices" />
 
             <LinearLayout
                 android:layout_width="match_parent"
