--- a/app/src/main/res/layout/card_service_verti.xml
+++ b/app/src/main/res/layout/card_service_verti.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="15sp"
+    android:background="@drawable/rounded_corner"
     android:orientation="horizontal">
 
     <com.google.android.material.card.MaterialCardView
