--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -7,7 +7,7 @@
     <!--Main Page Fragment -->
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.nearbylocator.view.HomeFragment"
+        android:name="com.example.nearbylocator.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home">
         <action
@@ -29,34 +29,34 @@
 
     <fragment
         android:id="@+id/serviceFragment"
-        android:name="com.example.nearbylocator.view.ServiceFragment"
+        android:name="com.example.nearbylocator.fragments.ServiceFragment"
         android:label="fragment_service"
         tools:layout="@layout/fragment_service" />
     <fragment
         android:id="@+id/mapviewFragment"
-        android:name="com.example.nearbylocator.view.MapViewFragment"
+        android:name="com.example.nearbylocator.fragments.MapViewFragment"
         android:label="fragment_mapview"
         tools:layout="@layout/fragment_mapview" />
     <fragment
         android:id="@+id/eventFragment"
-        android:name="com.example.nearbylocator.view.EventFragment"
+        android:name="com.example.nearbylocator.fragments.EventFragment"
         android:label="fragment_event"
         tools:layout="@layout/fragment_event" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.nearbylocator.view.ProfileFragment"
+        android:name="com.example.nearbylocator.fragments.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
 
     <!-- Sub Page Fragment -->
     <fragment
         android:id="@+id/seeallFragment"
-        android:name="com.example.nearbylocator.view.SeeallFragment"
+        android:name="com.example.nearbylocator.fragments.SeeallFragment"
         android:label="fragment_seeall"
         tools:layout="@layout/fragment_seeall" />
     <fragment
         android:id="@+id/viewallFragment"
-        android:name="com.example.nearbylocator.view.ViewallFragment"
+        android:name="com.example.nearbylocator.fragments.ViewallFragment"
         android:label="fragment_viewall"
         tools:layout="@layout/fragment_viewall" />
 </navigation>
