--- a/app/src/main/res/layout/fragment_mapview.xml
+++ b/app/src/main/res/layout/fragment_mapview.xml
@@ -1,31 +1,54 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- WebView for the Google Maps iframe -->
-    <WebView
-        android:id="@+id/mapWebView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-<!--        android:layout_above="@id/recyclerView"-->
+        android:layout_height="match_parent">
 
-    <!-- Custom Search Bar layout (layout_searchbar.xml) -->
-    <include
-        android:id="@+id/customSearchBar"
-        layout="@layout/layout_searchbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_above="@id/recyclerView" />
+        <!-- WebView for the Google Maps iframe -->
+        <WebView
+            android:id="@+id/mapWebView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <!-- RecyclerView for horizontally scrolling cards -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        <!-- Custom Search Bar layout (layout_searchbar.xml) -->
+        <include
+            android:id="@+id/customSearchBar"
+            layout="@layout/layout_searchbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/recyclerView"
+            android:layout_margin="16dp" />
+
+        <!-- RecyclerView for horizontally scrolling cards -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:clipToPadding="false"
+            android:orientation="horizontal"
+            android:padding="8dp" />
+
+    </RelativeLayout>
+
+    <!-- Bottom Sheet for layout_mapview_extended -->
+    <LinearLayout
+        android:id="@+id/layoutMiscellaneous"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:clipToPadding="false"
-        android:orientation="horizontal"
-        android:padding="8dp" />
-</RelativeLayout>
+        android:background="@drawable/background_mapview_extended"
+        android:elevation="16dp"
+        android:orientation="vertical"
+        app:layout_behavior="@string/bottom_sheet_behavior">
+
+        <!-- Include the extended layout here -->
+        <include layout="@layout/layout_mapview_extended" />
+
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
