--- a/app/src/main/res/layout/layout_quick_place_category.xml
+++ b/app/src/main/res/layout/layout_quick_place_category.xml
@@ -18,6 +18,7 @@
 
             <!-- multiple categories -->
             <LinearLayout
+                android:id="@+id/placeIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10sp"
